# base64

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  base64.c  base64.h  config.h.in  main.c
.github/workflows/: test.yml
cmake/: base64.pc.in  config.h.in  test-arch.c
cmake/Modules/: TargetArch.cmake  TargetSIMDInstructionSet.cmake
include/: libbase64.h
lib/: codec_avx2.c  codec_avx2.h  codec_choose.c  codec_choose.h  codec_neon.c  codec_neon32.c  codec_neon64.c  codec_plain.c  codec_plain.h  codec_sse42.c  codec_ssse3.c  codec_ssse3.h  codecs.h  env.h  exports.txt  feature_level.c  lib.c  lib_openmp.c  lib_plain.c  libbase64.c  table_generator.c
lib/arch/avx/: codec.c  enc_loop_asm.c
lib/arch/avx2/: codec.c  dec_loop.c  enc_loop.c  enc_loop_asm.c
lib/arch/avx512/: chromiumbase64.c  chromiumbase64.h  codec.c  enc_loop.c  enc_reshuffle_translate.c
lib/arch/generic/: codec.c  dec_head.c  dec_tail.c  enc_tail.c
lib/arch/generic/32/: dec_loop.c  enc_loop.c
lib/arch/generic/64/: dec_loop.c  enc_loop.c
lib/arch/neon32/: codec.c  dec_loop.c  enc_loop.c  enc_reshuffle.c  enc_translate.c
lib/arch/neon64/: codec.c  dec_loop.c  enc_loop.c  enc_loop_asm.c  enc_reshuffle.c
lib/arch/sse2/: compare_macros.h  dec_loop.c
lib/arch/sse41/: codec.c  enc_reshuffle.c
lib/arch/sse42/: codec.c  dec_loop.c
lib/arch/ssse3/: _mm_bswap_epi32.c  codec.c  dec_loop.c  dec_reshuffle.c  enc_loop.c  enc_loop_asm.c  enc_reshuffle.c  enc_translate.c
lib/arch/ssse3_atom/: codec.c  dec_head.c  dec_loop.c  dec_reshuffle.c  dec_tail.c  enc_tail.c  enc_translate.c
lib/dec/: avx2.c  head.c  neon.c  neon32.c  neon64.c  sse42.c  ssse3.c  tail.c  uint32.c  uint64.c
lib/enc/: avx2.c  head.c  neon.c  neon32.c  neon64.c  ssse3.c  tail.c  uint32.c  uint64.c
lib/tables/: CMakeLists.txt  Makefile  tables.c  tables.h
msvc/: base64.sln  base64.vcxproj  base64.vcxproj.filters  benchmark_base64.vcxproj  benchmark_base64.vcxproj.filters  config.h  test_base64.vcxproj  test_base64.vcxproj.filters
test/: CMakeLists.txt  Makefile  benchmark.c  codec_supported.c  codec_supported.h  fuzz_decode.c  fuzz_helpers.h  fuzz_roundtrip.c  gettime_win.c  moby_dick.h  rand_unix.c  rand_win.c  test.c  test_base64.c
test/ci/: .gitattributes  amd64.sh  analysis.sh  checksums.txt  docker-arm32.sh  docker-guest.sh  docker-powerpc.sh  generic.sh  test.sh
